src/test/resources/tests/typeError/functionThatDontReturn.qg
init true

run true

input(a,b) true

fun thisNeverReturns(): number {
    if (false) {
        return 1
    }
    when (1) {
        2 -> return 1
    }
    while (false) {
        return 1
    }
    1 + 2
}